--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= render 'shared/title', title: '訂單資訊' %>
+
 <p>
   <strong>Name:</strong>
   <%= @order.name %>
