changed order path url helper

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -20,9 +20,9 @@
         <td><%= order.email %></td>
         <td><%= order.description %></td>
         <td><%= order.age %></td>
-        <td><%= link_to 'Show', order %></td>
+        <td><%= link_to 'Show', order_path(order) %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', order_path(order), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
