--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,7 +5,12 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><%= link_to '新增訂單', new_order_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to '新增訂單', new_order_path %></li>
+          <li><%= link_to '登出', logout_path %></li>
+        <% else %>
+          <li><%= link_to '登入', login_path %></li>
+        <% end %>
       </ul>
     </div>
   </div>
