--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -21,8 +21,10 @@
         <td><%= order.description %></td>
         <td><%= order.age %></td>
         <td><%= link_to '檢視訂單', order_path(order), class: 'btn btn-info' %></td>
-        <td><%= link_to '編輯訂單', edit_order_path(order), class: 'btn btn-warning' %></td>
-        <td><%= link_to '刪除訂單', order_path(order), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
+        <% if logged_in? %>
+          <td><%= link_to '編輯訂單', edit_order_path(order), class: 'btn btn-warning' %></td>
+          <td><%= link_to '刪除訂單', order_path(order), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
