--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -10,16 +10,27 @@
       </ul>
     </div>
   <% end %>
+  <% if controller.action_name == "new" %>
+    <div class="field">
+      <%= f.label :name %>
+      <%= f.text_field(:name, value: current_user.name) %>
+    </div>
 
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
+    <div class="field">
+      <%= f.label :email %>
+      <%= f.text_field(:email, value: current_user.email) %>
+    </div>
+  <% else %>
+    <div class="field">
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
+    <div class="field">
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+    </div>
+  <% end %>
 
   <div class="field">
     <%= f.label :description %>
