--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render 'shared/title', title: '訂單列表' %>
 
-<table>
+<table class="table table-hover table-striped">
   <thead>
     <tr>
       <th>姓名</th>
